# JadeVectorDB

./: .clang-tidy  .dockerignore  .gitignore  AUTHENTICATION_PERSISTENCE_PLAN.md  AUTOMATED_TEST_REPORT.md  BACKEND_ANALYSIS.md  BACKEND_SERVICE_VERIFICATION.md  BOOTSTRAP.md  BUILD.md  BUILD_GUIDE.md  BUILD_SYSTEM_ENHANCEMENT_SUMMARY.md  CONSISTENCY_REPORT.md  CONTRIBUTING.md  CleanupReport.md  DEC13.md  DEVELOPER_GUIDE.md  DISTRIBUTED_SYSTEM_IMPLEMENTATION_PLAN.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.core  Dockerfile.dev  Dockerfile.fixed  Dockerfile.local  ENABLE_DISTRIBUTED.md  EXPLAINATION.md  FRONTEND_STATUS_SUMMARY.md  FRONTEND_TESTS_IMPLEMENTATION.md  HANDOFF_NEXT_SESSION.md  INTEGRATION_GUIDE.md  MANUAL_TESTING_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUIZ_SYSTEM_DOCUMENTATION.md  QWEN.md  RAG_USECASE.md  README.md  RECOVERY_SUMMARY.md  SESSION_SUMMARY_2025-12-04.md  SHUTDOWN_DOCUMENTATION_INDEX.md  SPRINT_4_COMPLETION_REPORT.md  SPRINT_5_IMPLEMENTATION_PLAN.md  (+31 more)
backend/: BUILD.md  BUILD_QUICK_REFERENCE.md  BUILD_UNITED.md  CMakeLists.minimal.txt  CMakeLists.sprint22tests.txt  CMakeLists.test.txt  CMakeLists.txt  FR029_COMPLIANCE_ANALYSIS.md  PLATFORM_SUPPORT.md  README_BUILD.md  SPRINT_2.2_COMPLETION_SUMMARY.md  T236_IMPLEMENTATION_SUMMARY.md  build.sh  build_simple.sh  fix_all_parens.py  fix_final_parens.py  fix_parens.py  test_all.sh  test_sprint_1_2  test_sprint_1_4  test_sqlite_persistence.cpp
backend/archived_scripts/: BUILD_QUICK_REFERENCE.md  build_integration_test.sh  build_sprint22_tests.sh
backend/benchmarks/: vector_persistence_benchmark.cpp
backend/config/: development.json  distributed.json  logging.json  performance.json  production.json
backend/data/: system.db-shm  system.db-wal
backend/schemas/: database.fbs  index.fbs  vector.fbs
backend/scripts/: fix_error_returns.py
backend/src/: main.cpp
backend/src/analytics/: analytics_engine.cpp  analytics_engine.h  batch_processor.cpp  batch_processor.h  query_analytics_manager.cpp  query_analytics_manager.h  query_logger.cpp  query_logger.h
backend/src/cache/: permission_cache.cpp  permission_cache.h
backend/src/config/: config_loader.cpp  config_loader.h
backend/src/lib/: analytics_dashboard.h  arrow_utils.cpp  arrow_utils.h  auth.cpp  auth.h  cache.h  certificate_manager.cpp  certificate_manager.h  compression.cpp  compression.h  config.cpp  config.h  encryption.cpp  encryption.h  encryption_stubs.cpp  error_handling.cpp  error_handling.h  field_encryption_service.cpp  field_encryption_service.h  gpu_acceleration.cpp  gpu_acceleration.h  gpu_detection.cpp  gpu_detection.h  gpu_memory_manager.cpp  gpu_memory_manager.h  logging.cpp  logging.h  memory_pool.cpp  memory_pool.h  metrics.cpp  metrics.h  mmap_utils.cpp  mmap_utils.h  searchable_encryption.cpp  searchable_encryption.h  security_audit.cpp  security_audit.h  serialization.cpp  serialization.h  simd_ops.cpp  (+12 more)
backend/src/metrics/: prometheus_metrics.cpp  prometheus_metrics.h
backend/src/middleware/: ip_blocker.cpp  ip_blocker.h  rate_limiter.cpp  rate_limiter.h
backend/src/models/: auth.h  database.cpp  database.h  embedding_model.cpp  embedding_model.h  index.cpp  index.h  vector.cpp  vector.h
backend/src/services/: alert_service.cpp  alert_service.h  analytics_dashboard.cpp  analytics_dashboard.h  archival_service.cpp  archival_service.h  (+91 more)
backend/tests/: CMakeLists.txt  T230_TEST_IMPLEMENTATION_SUMMARY.md  test_advanced_embedding_integration.cpp  test_advanced_embedding_unit.cpp  test_advanced_filtering.cpp  test_advanced_filtering_integration.cpp  test_advanced_search.cpp  test_advanced_search_integration.cpp  test_analytics_dashboard.cpp  test_api_key_lifecycle.cpp  test_authentication_flows.cpp  test_bm25_index_builder.cpp  test_bm25_simple.cpp  test_compression.cpp  test_config.cpp  test_core_services_comprehensive.cpp  test_database_api.cpp  test_database_api_integration.cpp  test_database_service.cpp  test_database_service_unit.cpp  test_e2e_filtered_search.cpp  test_encryption.cpp  test_gpu_acceleration.cpp  test_hybrid_search_api.cpp  test_hybrid_search_integration.cpp  test_integration_comprehensive.cpp  test_metadata_filter.cpp  test_metadata_filter_unit.cpp  test_metadata_filter_unit.cpp.broken  test_phase15_integration.cpp  test_predictive_maintenance.cpp  test_search_api.cpp  test_search_api_integration.cpp  test_search_quality.cpp  test_search_serialization.cpp  test_service_interactions.cpp  test_similarity_search.cpp  test_similarity_search_algorithms_unit.cpp  test_similarity_search_unit.cpp  test_similarity_search_unit.cpp.old  (+6 more)
backend/unittesting/: README.md  test_analytics_engine.cpp  test_analytics_integration.cpp  test_batch_processor.cpp  test_bm25_persistence.cpp  test_bm25_scorer.cpp  test_crash_recovery.cpp  test_hybrid_search_engine.cpp  test_integration_auth_persistence  test_integration_auth_persistence.cpp  test_integration_vector_persistence.cpp  test_inverted_index.cpp  test_ip_blocker  test_ip_blocker.cpp  test_large_dataset.cpp  test_lazy_loading.cpp  test_memory_mapped_vector_store.cpp  test_memory_pressure.cpp  test_performance_benchmark  test_performance_benchmark.cpp  test_permission_cache  test_permission_cache.cpp  test_query_analytics_manager.cpp  test_query_logger.cpp  test_rate_limiter  test_rate_limiter.cpp  test_reranking_service.cpp  test_score_fusion.cpp  test_sprint_1_2.cpp  test_sprint_1_3  test_sprint_1_3.cpp  test_sprint_1_4.cpp  test_sprint_1_6  test_sprint_1_6.cpp  test_sprint_2_3_persistence.cpp  test_sqlite_persistence  test_subprocess_manager.cpp  test_vector_flush_manager.cpp
property-tests/: CMakeLists.txt  README.md  test_property_suite.cpp
property-tests/concurrency/: concurrency_properties.h  test_concurrency_properties.cpp
property-tests/consistency/: consistency_properties.h  test_consistency_properties.cpp
property-tests/distributed-system/: distributed_invariants.h  test_distributed_invariants.cpp
property-tests/framework/: property_test_framework.h
property-tests/vector-space/: test_vector_space_properties.cpp  vector_space_properties.h
(+792 files in other folders)
